--- a/login.html
+++ b/login.html
@@ -352,8 +352,8 @@ header {
             </div>
             <div class="nav-menu" id="navMenu">
                 <ul>
-                    <li><a href="Index.html" class="link active">Home</a></li>
-                    <li><a href="Index.html" class="link">Main Website</a></li>
+                    <li><a href="index.html" class="link active">Home</a></li>
+                    <li><a href="index.html" class="link">Main Website</a></li>
                 </ul>
             </div>
             <div class="nav-button">
